<resources>
    <string name="app_name">T Movies</string>
    <string name="error_message">Can\'t Reach HollyWood, Right Now!</string>
    <string name="error_message_2">make Sure that Wi-Fi or cellular mobile data is turned on and try again.</string>
    <string name="error_retry">Retry</string>
    <string name="SortOrder">Sort By</string>
    <string name="demo_text">Lorem ipsum dolor sit amet, qui facilisi mandamus qualisque ut, zril salutandi mel eu. Simul prompta sed ut.</string>
    <string name="demo_text1">Quo usque tandem abutere, Catilina, patientia nostra? quam diu etiam furor iste tuus nos eludet?</string>
    <string name="pref_sort_by_value_popular">popularity</string>
    <string name="pref_sort_by_value_rated">top_rated</string>
    <string name="movie_title">The Furious 8</string>
    <string name="trailer_type">Clip</string>
    <string name="trailer_name">Mickey Short</string>
    <string name="demo_url">www.dailymotionPictures.com</string>
    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="backdropHeight">256dp</string>
    <!-- Image setting -->


    <array name="spinner_list_item_array">
        <item>Popular Movie</item>
        <item>Top Rated Movie</item>
        <item>Favorite Movie</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_description">Description</string>
    <string name="demo_duration">Duration</string>
    <string name="demo_release_date">Release Date</string>
    <string name="MOVIE_KEY">movie</string>
    <string name="demo_max_rating">/10</string>
    <string name="sharedPreference_FirstRun">firstrun</string>
    <string name="sharedPreferences_firstRun">firstrun</string>
    <string name="content_description">Movie Poster</string>
</resources>
