<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/content_description"
        android:id="@+id/backdroplarge"
        android:layout_width="256dp"
        android:layout_height="280dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/oldest_movie" />

    <TextView
        android:id="@+id/titleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/demo_release_date"
        app:layout_constraintLeft_toLeftOf="@+id/releaseDateLarge"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateLarge" />

    <TextView
        android:id="@+id/releaseDateLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/movie_title"
        app:layout_constraintTop_toTopOf="@+id/backdroplarge"
        app:layout_constraintLeft_toRightOf="@+id/backdroplarge"
        android:layout_marginStart="24dp"
       />

    <TextView
        android:id="@+id/current_ratingLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/demo_max_rating"
        app:layout_constraintLeft_toLeftOf="@+id/titleLarge"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/titleLarge" />
</android.support.constraint.ConstraintLayout>