<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/error_test"
    android:visibility="invisible"
    >

    <ImageView
        android:id="@+id/errr_no_movie"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@drawable/ic_videocam_off_black_48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/tv_error_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintLeft_toLeftOf="@+id/errr_no_movie"
        app:layout_constraintRight_toRightOf="@+id/errr_no_movie"
        app:layout_constraintTop_toBottomOf="@+id/errr_no_movie"
        android:text="@string/error_message"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tv_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="232dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="@+id/tv_error_text_1"
        app:layout_constraintRight_toRightOf="@+id/tv_error_text_1"
        android:text="@string/error_message_2" />

    <Button
        android:id="@+id/btn_retry"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:elevation="5dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/error_retry"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_error_text"
        app:layout_constraintRight_toRightOf="@+id/tv_error_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_text" />


</android.support.constraint.ConstraintLayout>
</layout>